# Malcrow

./: .gitignore
dummy_exe/: Cargo.toml
dummy_exe/src/: main.rs
main/: Cargo.toml
main/malcrow/: bun.lockb  package.json  tailwind.config.js
main/malcrow/src/: donation.html  donation.js  index.html  index.js  tw.css
main/malcrow/src-tauri/: Cargo.toml  config.json  tauri.conf.json
main/malcrow/src-tauri/icons/: icon.icns
main/malcrow/src-tauri/src/: helper.rs  main.rs
main/src/: main.rs
