[package]
name = "Malcrow"
version = "0.0.0"
description = "Malcrow"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ini = "1.3.0"
msgbox = "0.7.0"
winreg = "0.52.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
